# hacker-clone

./: .env  .env.swp  Cargo.toml  README.md
migrations/2020-11-23-124747_hackerclone/: up.sql
src/: main.rs  models.rs  schema.rs
templates/: base.html  index.html  post.html  signup.html
