[package]
name = "hacker-clone"
version = "0.1.0"
authors = ["fiqi1992 <fahrir20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera ="1.5.0"
serde = "1.0"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres"] }
actix-identity = "0.3.1"
